--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
     <title>Git & Github - HW1</title>
-    <title>Exploring Workflow Concepts - Authoring</title>
-
-
-
-
 </head>
+<body>
+    <h1>This is Github exploring workflow concepts -Authoring 1</h1>
+
+
+</body>
